k8s/base/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: cat-weight-tracker
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/sdcarter/cat-weight-tracker-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /cats/
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /cats/
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 30
        command: ["/bin/bash", "-c"]
        args:
          - |
            sleep 5 &&
            alembic upgrade head &&
            uvicorn app.main:app --host 0.0.0.0 --port 4000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: cat-weight-tracker
spec:
  ports:
  - port: 4000
    targetPort: 4000
  selector:
    app: backend
